--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ footer-links:
   flickr:
   github: packbionics/packbionics.github.io
   instagram:
-  linkedin:
+  linkedin: linkedin.com/company/pack-bionics
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: packbionics
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: user/packbionics
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
