--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: packbionics/packbionics.github.io
+  github: 
   instagram:
-  linkedin: linkedin.com/company/pack-bionics
+  linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: packbionics
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube:
   googleplus: # anything in your profile username that comes after plus.google.com/
